# numerlogy-renew

numerology-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
numerology-api/alembic/: env.py
numerology-api/alembic/versions/: 497b2cb25f8d_initial_schema.py  7cf18d295712_initial_schema.py  a1d6e2c84f31_drop_prompt_cache_handles.py  b2e7c9a4d810_drop_balance_execution_number.py  c3f8a1b6e920_add_karmic_debt_growth_number.py  d4a9f1c7b302_timestamptz_all_timestamp_columns.py  e5b1c2d3a4f6_clean_birthday_chart_add_not_123.py
numerology-api/app/: config.py  deps.py  main.py
numerology-api/app/core/: __init__.py  alphabet.py  numerology.py  numerology_chart.py  numerology_sums.py  security.py
numerology-api/app/db/: base.py  session.py
numerology-api/app/jobs/: __init__.py  aggregate_chat_metrics.py  cleanup_semantic_cache.py  cleanup_user_pdfs.py  detect_chat_abuse.py  email_dispatcher_job.py  (+4 more)
numerology-api/deploy/: .gitignore  README.md  backup.sh  cutover.md  deploy.sh  docker-compose.prod.yml  env.prod.example  nginx.conf  rollback.md
numerology-api/scripts/: _content_codes.py  _db.py  _report_content_data.py  backfill_kb.py  backfill_pdf_hashes.py  build_report_docx.py  build_report_payload.py  create_superuser.py  gen_report_assets.py  parse_content_docx.py  seed_all.py  seed_banks.py  seed_chat_addons.py  seed_content.py  seed_content_from_docx.py  seed_news.py  seed_packages.py  seed_products.py  seed_report_content.py  seed_user_grant_premium.py
numerology-api/tests/: conftest.py
(+732 files in other folders)
