[project]
name = "numerology-api"
version = "0.1.0"
description = "FastAPI backend for Numerology application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "authlib>=1.3",
    "httpx>=0.27",
    "jinja2>=3.1",
    "weasyprint>=62",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1",
    "email-validator>=2.2",
    "gunicorn>=23.0",
    "apscheduler>=3.10",
    "sentry-sdk[fastapi]>=2.0",
    "slowapi>=0.1.9",
    "google-genai>=0.3",
    "openai>=1.40,<2",
    "pgvector>=0.3",
    "tiktoken>=0.7",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
